--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,13 +1,13 @@
 ---
 development:
-  cloud_name: <%= ENV['Cloudinary_name'] %>
-  api_key: <%= ENV['Cloudinary_key'] %>
-  api_secret: <%= ENV['Cloudinary_secret'] %>
+  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: false
 production:
-  cloud_name: <%= ENV['Cloudinary_name'] %>
-  api_key: <%= ENV['Cloudinary_key'] %>
-  api_secret: <%= ENV['Cloudinary_secret'] %>
+  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: true
